# BYOKEY

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile.cross-aarch64  LICENSE-APACHE  Makefile  README.md  README_CN.md  appcast.xml  cliff.toml  install.sh  release-plz.toml
.cargo/: audit.toml
.github/scripts/: stub-loadwise-path-deps.sh
.github/workflows/: build.yml  ci.yml  release-plz.yml
crates/ampcode/: CHANGELOG.md  Cargo.toml
crates/ampcode/src/: client.rs  error.rs  lib.rs  local.rs  secrets.rs
crates/ampcode/src/types/: balance.rs  mod.rs  rpc.rs  thread.rs
crates/ampcode/tests/: integration.rs  live.rs
crates/auth/: CHANGELOG.md  Cargo.toml
crates/auth/src/: antigravity.rs  callback.rs  claude.rs  codex.rs  copilot.rs  credentials.rs  factory.rs  flow.rs  gemini.rs  iflow.rs  kimi.rs  kiro.rs  lib.rs  manager.rs  pkce.rs  qwen.rs
crates/auth/src/flow/: auth_code.rs  device_code.rs  mod.rs
crates/auth/src/provider/: claude.rs  claude_code.rs  codex_cli.rs  mod.rs
crates/config/: CHANGELOG.md  Cargo.toml
crates/config/src/: lib.rs  schema.rs  watcher.rs
crates/config/src/schema/: amp.rs  mod.rs  model.rs  payload.rs  provider.rs  runtime.rs
crates/daemon/: CHANGELOG.md  Cargo.toml
crates/daemon/src/: autostart.rs  control.rs  error.rs  lib.rs  paths.rs  process.rs  service.rs
crates/gui/: Cargo.toml
crates/gui/src/: main.rs  tray.rs
crates/gui/src/components/: provider_row.rs  proxy_control.rs
crates/proto/: CHANGELOG.md  Cargo.toml  build.rs
crates/proto/proto/: accounts.proto  amp.proto  status.proto
crates/proto/proto/byokey/management/: management.proto
crates/proto/src/: client.rs  lib.rs
crates/provider/: CHANGELOG.md  Cargo.toml
crates/provider/src/: antigravity.rs  claude.rs  cloak.rs  codex.rs  copilot.rs  device_profile.rs  factory.rs  gemini.rs  http_util.rs  iflow.rs  kimi.rs  kiro.rs  lib.rs  qwen.rs  registry.rs  retry.rs  routing.rs  selector.rs  stream_bridge.rs  thinking.rs  versions.rs
crates/provider/src/executor/: antigravity.rs  claude.rs  codex.rs  codex_ws.rs  copilot.rs  gemini.rs  iflow.rs  kimi.rs  kiro.rs  mod.rs  qwen.rs
crates/proxy/: CHANGELOG.md  Cargo.toml
crates/proxy/src/: amp.rs  amp_provider.rs  chat.rs  error.rs  factory.rs  lib.rs  messages.rs  models.rs  openapi.rs  router.rs  status.rs  usage.rs
crates/proxy/src/handler/: accounts.rs  amp.rs  amp_provider.rs  amp_threads.rs  chat.rs  management.rs  messages.rs  mod.rs  ratelimits.rs  status.rs
crates/proxy/src/handler/amp/: mod.rs  provider.rs  threads.rs
crates/proxy/src/handler/management/: accounts.rs  mod.rs  ratelimits.rs  status.rs
crates/proxy/src/middleware/: dump.rs  forward.rs  mod.rs
crates/proxy/src/util/: mod.rs  stream.rs
crates/store/: CHANGELOG.md  Cargo.toml
crates/store/src/: lib.rs  memory.rs  sqlite.rs
crates/store/src/migration/: m20260415_000001_create_accounts.rs  m20260415_000002_migrate_legacy_tokens.rs  m20260415_000003_create_conversations.rs  m20260415_000004_create_messages.rs  m20260415_000005_create_usage_records.rs  m20260417_000006_add_usage_account_id.rs  mod.rs
crates/store/src/persistent/: mod.rs  token.rs  usage.rs
crates/translate/: CHANGELOG.md  Cargo.toml
crates/translate/src/: cache_control.rs  claude_to_openai.rs  codex_to_openai.rs  gemini_native_to_openai.rs  gemini_to_openai.rs  lib.rs  merge_messages.rs  openai_to_claude.rs  openai_to_codex.rs  openai_to_gemini.rs  openai_to_gemini_native.rs  thinking.rs
crates/tui/: AGENTS.md  Cargo.toml
crates/tui/src/: app.rs  lib.rs  ui.rs
crates/types/: CHANGELOG.md  Cargo.toml
crates/types/src/: chat.rs  error.rs  lib.rs  provider.rs  token.rs  traits.rs
desktop/: Cargo.toml  ExportOptions.plist  Info.plist  build.rs  package-lock.json  package.json  tsconfig.json  webpack.config.js
desktop/Byokey/: AccountsView.swift  ByokeyApp.swift  ConfigManager.swift  ContentView.swift  DaemonLogView.swift  DaemonManager.swift  GeneralView.swift  Info.plist  SWIFT_MIGRATION.md  SettingsView.swift  buf.gen.yaml  openapi.json
desktop/Byokey.xcodeproj/: project.pbxproj
desktop/Byokey.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
desktop/Byokey.xcodeproj/project.xcworkspace/xcuserdata/Shiro.xcuserdatad/: UserInterfaceState.xcuserstate
desktop/Byokey.xcodeproj/xcshareddata/xcschemes/: Byokey.xcscheme
desktop/Byokey.xcodeproj/xcuserdata/Shiro.xcuserdatad/xcschemes/: xcschememanagement.plist
desktop/Byokey/App/: AppEnvironment.swift  ByokeyApp.swift
desktop/Byokey/Assets.xcassets/provider-iflow.imageset/: Contents.json
desktop/Byokey/Assets.xcassets/provider-kiro.imageset/: Contents.json
desktop/Byokey/Services/: APIClient.swift  CLIRunner.swift  ConfigManager.swift  DataService.swift  ProcessManager.swift  Telemetry.swift  TypeAliases.swift  UpdaterState.swift
desktop/Byokey/Views/: AccountsView.swift  AmpView.swift  AnsiText.swift  AppShell.swift  ContentView.swift  DesignSystem.swift  GeneralView.swift  ModelsView.swift  OverviewView.swift  SettingsView.swift  ThreadsView.swift  UsageView.swift
desktop/Byokey/Views/Dashboard/: DashboardActivityCard.swift  DashboardComponents.swift  DashboardHistoryChart.swift  DashboardLogCard.swift  DashboardRateLimitsCard.swift  DashboardStatsRow.swift  DashboardStatusBar.swift
desktop/LaunchDaemons/: io.byokey.desktop.daemon.plist
desktop/scripts/: build-rust.sh  sign-rust.sh
desktop/src/: App.tsx  api.ts  index.html  main.js  panel.rs  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/src/pages/: Accounts.tsx  Dashboard.tsx  Settings.tsx
docs/: README_CN.md
gui/: Cargo.toml
gui/src/: main.rs
gui/src/components/: mod.rs
src/: auth.rs  control_server.rs  daemon.rs  main.rs  serve.rs
src/actions/: amp.rs  auth.rs  mod.rs  serve.rs  telemetry.rs
src/amp/: bundle.rs  mod.rs  patch.rs
