[workspace]
resolver = "2"
members = [
    "crates/types",
    "crates/daemon",
    "crates/config",
    "crates/store",
    "crates/auth",
    "crates/translate",
    "crates/provider",
    "crates/proto",
    "crates/proxy",
    "crates/ampcode",
]
exclude = ["desktop/src-tauri"]

[workspace.package]
edition = "2024"
version = "1.0.0"
authors = ["AprilNEA <github@sku.moe>"]
description = "Bring Your Own Keys — AI subscription-to-API proxy gateway"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AprilNEA/BYOKEY"
homepage = "https://github.com/AprilNEA/BYOKEY"
keywords = ["ai", "proxy", "openai", "claude", "llm"]
categories = ["web-programming::http-server", "network-programming"]
readme = "README.md"

[workspace.dependencies]
# Workspace crates
byokey-types = { version = "1.0.0", path = "crates/types" }
byokey-config = { version = "1.0.0", path = "crates/config" }
byokey-store = { version = "1.0.0", path = "crates/store" }
byokey-auth = { version = "1.0.0", path = "crates/auth" }
byokey-translate = { version = "1.0.0", path = "crates/translate" }
byokey-provider = { version = "1.0.0", path = "crates/provider" }
byokey-proto = { version = "1.0.0", path = "crates/proto" }
byokey-proxy = { version = "1.0.0", path = "crates/proxy" }
byokey-daemon = { version = "1.0.0", path = "crates/daemon" }
ampcode = { version = "0.1.0", path = "crates/ampcode" }
loadwise-core = "0.1.0"
aigw = { version = "0.4.0", default-features = false, features = ["anthropic", "anthropic-claude-code", "openai", "openai-compat"] }
aigw-core = "0.4.0"
aigw-openai = "0.4.0"
reqwest = { version = "0.12", default-features = false }
secrecy = "0.10"

# Async runtime
tokio = { version = "1", features = ["full"] }
# Socket activation (systemfd dev loop, systemd/launchd LISTEN_FDS)
listenfd = "1"
# HTTP
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "request-id"] }
rquest = { version = "5", features = ["full"] }
eventsource-stream = "0.2"
# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Error
thiserror = "2"
anyhow = "1"
# Config & hot reload
figment = { version = "0.10", features = ["yaml", "json", "env"] }
notify = "7"
arc-swap = "1"
# Auth
oauth2 = "5"
rand = { version = "0.8", features = ["std"] }
uuid = { version = "1", features = ["v4", "v5"] }
sha2 = "0.10"
base64 = "0.22"
open = "5"
# Storage
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
sea-orm = { version = "2.0.0-rc.38", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "2.0.0-rc.38", default-features = false, features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
# Token counting
tiktoken-rs = "0.6"
# JSON path
jsonptr = "0.4"
# Async trait
async-trait = "0.1"
# Builder
bon = "3"
# URL encoding
serde_urlencoded = "0.7"
# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
# Regex (used by amp patch)
regex = "1"
# RPC
tarpc = { version = "0.37", features = ["tokio1", "serde-transport", "unix", "serde-transport-json"] }
tokio-util = { version = "0.7", features = ["codec"] }
# Futures
futures-core = "0.3"
futures-util = "0.3"
bytes = "1"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
http = "1"
# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
# OpenAPI
utoipa = "5"
# ConnectRPC (Rust server, buffa-based protobuf)
connectrpc = { version = "0.3", default-features = false, features = ["axum", "gzip"] }
connectrpc-build = "0.3"
buffa = "0.3"
buffa-types = { version = "0.3", features = ["json"] }
http-body = "1"


[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = "warn"

# ── Root package (cargo install byokey) ──────────────────────────────────────

[package]
name = "byokey"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[[bin]]
name = "byokey"
path = "src/main.rs"

[dependencies]
byokey-proxy.workspace = true
byokey-config.workspace = true
byokey-auth.workspace = true
byokey-store.workspace = true
byokey-types.workspace = true
byokey-daemon.workspace = true
axum.workspace = true
clap.workspace = true
clap_complete.workspace = true
anyhow.workspace = true
tokio.workspace = true
listenfd = { workspace = true }
arc-swap.workspace = true
rquest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tarpc.workspace = true
tokio-util.workspace = true
futures-util.workspace = true
serde_json.workspace = true
regex.workspace = true
utoipa.workspace = true
