[package]
name = "byokey-gui"
version = "0.2.0"
edition = "2024"
authors = ["AprilNEA <github@sku.moe>"]
description = "BYOKEY desktop client — macOS menu bar app"
license = "MIT OR Apache-2.0"

[[bin]]
name = "byokey-gui"
path = "src/main.rs"

[dependencies]
byokey-types   = { version = "0.2.0", path = "../crates/types" }
byokey-config  = { version = "0.2.0", path = "../crates/config" }
byokey-store   = { version = "0.2.0", path = "../crates/store" }
byokey-auth    = { version = "0.2.0", path = "../crates/auth" }
byokey-proxy   = { version = "0.2.0", path = "../crates/proxy" }
gpui           = "0.2"
gpui-component = "0.5"
tray-icon      = "0.21"
crossbeam-channel = "0.5"
tokio          = { version = "1", features = ["full"] }
anyhow         = "1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"

# Declare an explicit workspace so Cargo doesn't pick up the parent workspace.
# This keeps byokey-gui out of the main CI (macOS-only binary).
[workspace]
