[package]
name = "byokey-config"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
byokey-types.workspace = true
figment.workspace = true
notify.workspace = true
arc-swap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
