[package]
name = "byokey-provider"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
byokey-types.workspace = true
byokey-config.workspace = true
byokey-auth.workspace = true
byokey-translate.workspace = true
rquest.workspace = true
eventsource-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures-core.workspace = true
futures-util.workspace = true
bytes.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
byokey-store.workspace = true
