[package]
name = "byokey-provider"
version.workspace = true
edition.workspace = true
authors.workspace    = true
description.workspace = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true

[lints]
workspace = true

[dependencies]
byokey-types = { workspace = true, features = ["rquest"] }
byokey-config.workspace = true
byokey-auth.workspace = true
byokey-translate.workspace = true
rquest.workspace = true
rand.workspace = true
eventsource-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures-core.workspace = true
futures-util.workspace = true
bytes.workspace = true
tracing.workspace = true
hmac = "0.12"
sha2.workspace = true
hex = "0.4"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
byokey-store.workspace = true
