[package]
name = "byok-store"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
byok-types.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
