[package]
name = "byokey-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Terminal UI for BYOKEY"

[dependencies]
byokey-types.workspace = true
byokey-store.workspace = true
byokey-auth.workspace = true
byokey-daemon.workspace = true
anyhow.workspace = true
rquest.workspace = true
ratatui = "0.29"
crossterm = "0.28"

[lints]
workspace = true
