[package]
name = "byokey-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Terminal UI for BYOKEY"

[dependencies]
byokey-proto = { workspace = true, features = ["client"] }
anyhow.workspace = true
http.workspace = true
ratatui = "0.29"
crossterm = "0.28"

[lints]
workspace = true
