[package]
name = "byokey-desktop"
version = "0.2.0"
edition = "2024"
authors = ["AprilNEA <github@sku.moe>"]
description = "BYOKEY desktop client — system tray app"
license = "MIT OR Apache-2.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
anyhow = "1"
rquest = "5"
arc-swap = "1"

byokey-types = { path = "../../crates/types" }
byokey-config = { path = "../../crates/config" }
byokey-store = { path = "../../crates/store" }
byokey-auth = { path = "../../crates/auth" }
byokey-proxy = { path = "../../crates/proxy" }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"

[workspace]
